--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Application Form</title>
+  <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
   <h2>Application Form</h2>
